# vboxapi

./: README.md  pyproject.toml  vboxapisetup.py
bindings/webservice/: vboxweb.wsdl
vboxapi/: VirtualBox_constants.py  __init__.py
xpcom/: vboxxpcom.py
