[tool.poetry]
# publishing to PyPI is not a priority at the moment, so use 'local' name
name = "vboxapi-cavcrosby"
# should follow the version of VirtualBox it intends to target
version = "6.1.22"
description = "Python interface to VirtualBox"
homepage = "http://www.virtualbox.org"
repository = "https://github.com/cavcrosby/vboxapi"
license = "GPL-2.0-only"
readme = "README.md"
authors = [
    "Oracle Corp. <vbox-dev@virtualbox.org>",
    "Conner Crosby <conner@cavcrosby.tech>"
]
# NOTE: webservice might be included in the future, need to work around the
# dinosaur SOAP package recommended (python-zsi, provides wsdl2py but
# generates to py2)
packages = [
    { include = "vboxapi" },
    { include = "xpcom" },
]

[tool.poetry.dependencies]
python = "^3.6.2"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
